--- a/.env
+++ b/.env
@@ -14,6 +14,10 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
+
+#APP_ENV=prod
+#APP_DEBUG=0
+
 APP_ENV=dev
 APP_SECRET=613db34333075e01ed11d776087ba550
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
@@ -26,7 +30,7 @@ APP_SECRET=613db34333075e01ed11d776087ba550
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #DATABASE_URL=mysql://tde:Erick2691@127.0.0.1:3306/dbFpiLyon
-DATABASE_URL=mysql://root:Erick2691@127.0.0.1:3306/security_fpiinscription
+DATABASE_URL=mysql://tde:Erick2691@127.0.0.1:3306/security_fpiinscription
 
 ###< doctrine/doctrine-bundle ###
 
