--- a/.env
+++ b/.env
@@ -29,8 +29,8 @@ APP_SECRET=613db34333075e01ed11d776087ba550
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-#DATABASE_URL=mysql://tde:Erick2691@127.0.0.1:3306/security_fpiinscription
-DATABASE_URL=mysql://root:Erick2691@127.0.0.1:3306/security_fpiinscription
+DATABASE_URL=mysql://tde:Erick2691@127.0.0.1:3306/fpiinscription_25janv2020
+#DATABASE_URL=mysql://root:Erick2691@127.0.0.1:3306/security_fpiinscription
 
 ###< doctrine/doctrine-bundle ###
 
