creation codage et mise en place de la fonctionnalite PRODUCT

--- a/.env
+++ b/.env
@@ -15,10 +15,10 @@
 
 ###> symfony/framework-bundle ###
 
-APP_ENV=prod
-APP_DEBUG=0
+#APP_ENV=prod
+#APP_DEBUG=0
 
-#APP_ENV=dev
+APP_ENV=dev
 APP_SECRET=613db34333075e01ed11d776087ba550
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^localhost|example\.com$'
