--- a/.env
+++ b/.env
@@ -19,10 +19,13 @@
 #APP_DEBUG=0
 
 APP_ENV=dev
+
 APP_SECRET=613db34333075e01ed11d776087ba550
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
+
+
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
@@ -34,6 +37,11 @@ DATABASE_URL=mysql://tde:Erick2691@127.0.0.1:3306/fpiinscription_25janv2020
 
 ###< doctrine/doctrine-bundle ###
 
+
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://traoreerickdaouda:Erick2691@default
+ MAILER_DSN=gmail://traoreerickdaouda:Erick2691@default
+#MAILER_DSN=smtp://localhost:587
 ###< symfony/mailer ###
+
+
